# wink

./: .gitignore  Cargo.toml  README.md  package.json
docs/: README.md  package.json
docs/.vuepress/: client.js  config.js
docs/.vuepress/components/: WinkDemo.vue
docs/.vuepress/public/geometry/: geometry_data.json
docs/.vuepress/public/wasm/: demo.js  wink.d.ts  wink.js  wink_bg.wasm  wink_bg.wasm.d.ts
docs/.vuepress/scripts/: watch-geometry.js
docs/demo/: README.md  index.md
src/: camera.rs  lib.rs  lib_backup.rs  lib_clean.rs  main.rs  shader.wgsl  shader_color.wgsl  shader_solid.wgsl  timing.rs  vertex.rs
src/openmodel/: Cargo.toml  README.md  all_geometry.json  star_mesh.json
src/openmodel/src/: lib.rs  macros.rs  main.rs  model_mesh.rs
src/openmodel/src/common/: data.rs  json_serialization.rs  mod.rs
src/openmodel/src/geometry/: line.rs  linecloud.rs  mesh.rs  mod.rs  plane.rs  pline.rs  point.rs  pointcloud.rs
src/openmodel/src/primitives/: color.rs  mod.rs  vector.rs  xform.rs
src/openmodel/tests/: concave_mesh_test.rs  earclip_triangulation_test.rs  json_geometry_test.rs  line_visualization_test.rs  mesh_edge_extraction_test.rs  pline_pipe_test.rs  polygon_mesh_test.rs  test_data.rs
